# morsaicos

./: README.md  __init__.py  beauty_analyzer.py  color_analyzer.py  generate_color_index.py  gpu_mosaic_generator.py  index_generator.py  mosaic_assembler.py  mosaic_enhancer.py  paths.py  photomosaic_generator.py  pyproject.toml  requirements.txt  start_webapp.py  web_app.py
.github/workflows/: repository-hygiene.yml
app/: __init__.py  config.py  logging_config.py  main.py  models.py
app/routes/: __init__.py  mosaics.py
app/services/: __init__.py  color_index.py  jobs.py  mosaic_runner.py
static/css/: app.css
static/js/: app.js
templates/: index.html
